--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "mocha": "^8.3.1"
     },
     "devDependencies": {
+        "lite-html": "^0.2.4",
         "lite-server": "^2.6.1",
+        "page": "^1.11.6",
         "playwright-chromium": "^1.9.2"
     }
 }
