--- a/08 Modular Application/01.Team-Manager/package.json
+++ b/08 Modular Application/01.Team-Manager/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "team-manager",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "lit-html": "^1.3.0",
-    "lite-server": "^2.6.1",
-    "page": "^1.11.6",
-    "save-dev": "^0.0.1-security"
-  }
+    "name": "team-manager",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "lite-server"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "page": "^1.11.6",
+        "save-dev": "^0.0.1-security"
+    },
+    "devDependencies": {
+        "lit-html": "^1.3.0",
+        "lite-server": "^2.6.1"
+    }
 }
